# libmem

./: .clangd  .dockerignore  .gitignore  .gitmodules  BSD.mk  CMakeLists.txt  CONTRIBUTING.md  DOCS.md  Dockerfile  LICENSE  Linux.mk  Makefile  PreLoad.cmake  README.md  Win.mk  clang-format  docker-env-aarch64.sh  docker-env.sh  libmem-config.cmake  libmem-config.cmake.in  libmem-static.pc.in  libmem.pc.in  makebundle.sh  toolchain-mingw.cmake  xmake.lua
.github/: FUNDING.yml
.github/workflows/: libmem-linux-x86-tester.yml  libmem-linux-x86.yml  libmem-linux.yml  release.yml  rust-linux-test.yml  test-linux-i686.yml  test-linux.yml  test-windows.yml
bindings/Nim/: LICENSE  Nimlibmem.nimble  README.md  README_BINDINGS.md  TODO  TODO.txt
bindings/Nim/release/: clean_generated_file.py  nimlibmem.nim
bindings/Nim/src/: Libmem  Nimlibmem.nim  Nimlibmem.nims
bindings/Nim/tests/: test_nimlibmem.nim
bindings/libmem-lua/src/: bindings.c
bindings/libmem-py/: MANIFEST.in  pyproject.toml
bindings/libmem-rs/: build.rs
bindings/lua/src/: bindings.c  types.c  types.h
bindings/lua/tests/: test.lua
bindings/python/: MANIFEST.in  fullclean.sh  genwrapper.py  setup.py
bindings/python/scripts/: libmem.pyi  stubs.py
bindings/python/tests/: test_mock.py  tests.py  tests_libmem.py
bindings/rust/: Cargo.toml  build.rs  clean.sh
bindings/rust/libmem/: Cargo.toml
bindings/rust/libmem-sys/: Cargo.toml  build.rs
bindings/rust/libmem-sys/src/: bindings.rs  lib.rs
bindings/rust/libmem/src/: asm.rs  hook.rs  lib.rs  memory.rs  module.rs  process.rs  scan.rs  segment.rs  symbol.rs  thread.rs  vmt.rs
bindings/rust/libmem/tests/: common.rs  local.rs  remote.rs
bindings/rust/src/: lib.rs
bindings/rust/tests/: Cargo.toml
bindings/rust/tests/src/: main.rs
docs/: DOCS.md  README.md
docs/api/c/: LM_AllocMemory.md  LM_AllocMemoryEx.md  LM_Assemble.md  LM_AssembleEx.md  LM_CodeLength.md  LM_CodeLengthEx.md  LM_DataScan.md  LM_DataScanEx.md  LM_DeepPointer.md  LM_DeepPointerEx.md  LM_DemangleSymbol.md  LM_Disassemble.md  LM_DisassembleEx.md  LM_EnumModules.md  LM_EnumModulesEx.md  LM_EnumPages.md  LM_EnumPagesEx.md  LM_EnumProcesses.md  LM_EnumSymbols.md  LM_EnumSymbolsDemangled.md  LM_EnumThreads.md  LM_EnumThreadsEx.md  LM_FindModule.md  LM_FindModuleEx.md  LM_FindProcess.md  LM_FindSymbolAddress.md  LM_FindSymbolAddressDemangled.md  LM_GetPage.md  (+32 more)
docs/examples/rust/: Cargo.toml
docs/examples/rust/process_enumeration/: Cargo.toml
docs/examples/rust/src/: asm_disasm.rs  memory.rs  module_enumeration.rs  parent_process.rs  process_enumeration.rs  thread_enumeration.rs
docs/python/: LM_AllocMemoryEx.md  LM_AssembleEx.md  LM_CodeLengthEx.md  LM_DataScanEx.md  LM_DeepPointerEx.md  LM_DemangleSymbol.md  LM_EnumModulesEx.md  LM_EnumSymbols.md  LM_EnumThreads.md  LM_FindModule.md  LM_FindProcess.md  LM_FindSymbolAddress.md  LM_FreeMemory.md  LM_FreeMemoryEx.md  LM_GetProcess.md  LM_GetProcessEx.md  LM_GetThreadEx.md  LM_GetThreadProcess.md  LM_HookCodeEx.md  LM_LoadModuleEx.md  LM_PatternScan.md  LM_PatternScanEx.md  LM_ReadMemoryEx.md  LM_SetMemory.md  LM_SigScanEx.md  LM_UnhookCode.md  LM_UnloadModule.md  LM_WriteMemoryEx.md
docs/rust/: LM_AllocMemory.md  LM_AllocMemoryEx.md  LM_Assemble.md  LM_AssembleEx.md  LM_CodeLengthEx.md  LM_DeepPointerEx.md  LM_Disassemble.md  LM_EnumModules.md  LM_EnumModulesEx.md  LM_EnumPagesEx.md  LM_EnumThreadsEx.md  LM_FindModule.md  LM_FindModuleEx.md  LM_FindProcess.md  LM_FindSymbolAddress.md  LM_FreeMemoryEx.md  LM_GetProcess.md  LM_HookCodeEx.md  LM_LoadModule.md  LM_LoadModuleEx.md  LM_PatternScan.md  LM_ProtMemory.md  LM_ProtMemoryEx.md  LM_UnloadModule.md  LM_WriteMemoryEx.md
example/: build_cc.sh  build_vs.bat  example.c  example.cpp
examples/: README.md
examples/c/: module_enumeration.c  thread_enumeration.c
examples/python/: memory.py  parent_process.py  process_enumeration.py  thread_enumeration.py
examples/rust/: Cargo.toml
include/libmem/: api.h  libmem.h  libmem.hpp
internal/demangler/: demangler.cpp  demangler.h
internal/elfutils/: elfutils.c  elfutils.h
internal/posixutils/: posixutils.c  posixutils.h
internal/winutils/: winutils.c  winutils.h
libmem/: libmem.c  libmem.cpp  libmem.h  libmem.hpp
libmem++/: libmem.cpp  libmem.hpp
libmem-lua/: Makefile
libmem-lua/src/: bindings.c
libmem-lua/tests/: test.lua
libmem-py/: LICENSE  MANIFEST.in  README.md  clean.py  configure.py  libmem-py.c  setup.py  tests.py
libmem-py/tests/: test_all.py  tests.py
libmem-rs/: Cargo.toml  build.rs
libmem-rs/src/: lib.rs
libmem/include/: libmem.h  libmem.hpp
libmem/libmem/: libmem.h
libmem/src/: asm.c  binparser.c  call.c  elfparser.c  handle.c  helpers.c  hook.c  internal.h  libmem.c  memory.c  module.c  page.c  peparser.c  process.c  scan.c  symbol.c  symbol.cpp  syscall.c  thread.c  vmt.c
src/: asm.c  hook.c  internal.h  memory.c  module.c  page.c  process.c  scan.c  symbol.cpp  thread.c  utils.c  utils.h  vmt.c
src/common/: asm.c  cppwrapper.cpp  hook.c  memory.c  module.c  process.c  scan.c  segment.c  symbol.c  thread.c  vmt.c
src/freebsd/: memory.c  module.c  osprot.c  osprot.h  process.c  segment.c  symbol.c  thread.c  utils.c  utils.h
src/linux/: consts.h  memory.c  module.c  osprot.c  osprot.h  process.c  segment.c  symbol.c  thread.c  utils.c  utils.h
src/win/: memory.c  module.c  osprot.c  osprot.h  process.c  segment.c  symbol.c  thread.c
tests/: CMakeLists.txt  cpptests.cpp  libtest.c  target.c  test1.c  test2.c  tests.c
tests/unit/: asm.c  helpers.h  hook.c  memory.c  minunit.h  module.c  page.c  process.c  scan.c  segment.c  symbol.c  thread.c  unit.c  unit.h  vmt.c
tools/: build-release.sh  docker-env-aarch64.sh  docker-env.sh  gendocs_c.py  makebundle.sh  patch-all-license-headers.sh  patch-license-header.sh  test.sh  unit_test.bat  unit_test.ps1  unit_test.sh
tools/docker-env/: .dockerignore  entrypoint.sh  linux-gnu-crossbuild-i686.Dockerfile  linux-gnu-mingw.Dockerfile  linux-gnu.Dockerfile  linux-musl.Dockerfile
tools/local-env/: windows-gnu.sh  windows-msvc.sh
(+235 files in other folders)
