[package]
name = "libmem"
version = "5.0.0-pre0"
authors = ["rdbo"]
edition = "2021"
# rust-version: "1.64.0"
description = "Advanced Game Hacking Library (Windows/Linux/FreeBSD)"
documentation = "https://github.com/rdbo/libmem/blob/master/docs/DOCS.md"
readme = "README.md"
homepage = "https://github.com/rdbo/libmem"
repository = "https://github.com/rdbo/libmem"
license = "AGPL-3.0"
# license-file = "LICENSE"
keywords = ["gamehacking", "memory", "hooking", "assembler", "disassembler"]
categories = ["os", "os::windows-apis", "os::linux-apis", "os::freebsd-apis", "os::unix-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libmem"

[features]
default = ["fetch"]
static = []
fetch = ["static", "dep:reqwest", "dep:flate2", "dep:tar"] # Currently, this feature will not do dynamic linking

[[bin]]
name = "tests"

[build-dependencies]
reqwest = { version = "0.10", features = ["blocking"], optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
