[package]
name = "libmem"
version = "5.1.1"
authors = ["rdbo"]
edition = "2021"
description = "Advanced Game Hacking Library (Windows/Linux/FreeBSD)"
documentation = "https://github.com/rdbo/libmem/blob/master/docs/README.md"
readme = "README.md"
homepage = "https://github.com/rdbo/libmem"
repository = "https://github.com/rdbo/libmem"
license = "AGPL-3.0"
# license-file = "LICENSE"
keywords = ["gamehacking", "memory", "hooking", "assembler", "disassembler"]
categories = ["os", "os::windows-apis", "os::linux-apis", "os::freebsd-apis", "os::unix-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["fetch"]
static = ["libmem-sys/static"]
fetch = ["libmem-sys/fetch"]

[dependencies]
bitflags = "2.5.0"
libmem-sys = { version = "5.1.1", path = "../libmem-sys", default-features = false }
