[package]
name = "process_enumeration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmem = ">=0.1.2"

[[bin]]
name = "process_enumeration"
path = "src/process_enumeration.rs"

[[bin]]
name = "parent_process"
path = "src/parent_process.rs"

