[package]
name = "process_enumeration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmem = ">=0.1.2"

[[bin]]
name = "process_enumeration"
path = "src/process_enumeration.rs"

[[bin]]
name = "parent_process"
path = "src/parent_process.rs"

[[bin]]
name = "thread_enumeration"
path = "src/thread_enumeration.rs"

[[bin]]
name = "module_enumeration"
path = "src/module_enumeration.rs"

[[bin]]
name = "asm_disasm"
path = "src/asm_disasm.rs"

